# ethcli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release-please.yml  release.yml
src/: cache.rs  checkpoint.rs  error.rs  fetcher.rs  lib.rs  main.rs  proxy.rs  utils.rs
src/abi/: decoder.rs  fetcher.rs  mod.rs  parser.rs
src/cli/: account.rs  address.rs  cast.rs  config.rs  contract.rs  endpoints.rs  ens.rs  gas.rs  logs.rs  mod.rs  rpc.rs  sig.rs  simulate.rs  tenderly.rs  token.rs  tx.rs
src/config/: addressbook.rs  chain.rs  endpoint.rs  file.rs  mod.rs
src/etherscan/: cache.rs  client.rs  mod.rs
src/output/: csv.rs  json.rs  mod.rs  sqlite.rs
src/rpc/: defaults.rs  endpoint.rs  health.rs  mod.rs  multicall.rs  optimizer.rs  pool.rs  retry.rs  selector.rs
src/tx/: analyzer.rs
src/utils/: mod.rs
tests/: cli_integration.rs
