[package]
name = "eth-log-fetcher"
version = "0.1.0"
edition = "2021"
description = "Fast Ethereum historical log fetcher with parallel RPC requests"
license = "MIT"
repository = "https://github.com/example/eth-log-fetcher"
keywords = ["ethereum", "logs", "events", "rpc", "blockchain"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "eth-log-fetch"
path = "src/main.rs"

[lib]
name = "eth_log_fetcher"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
alloy = { version = "1.0", features = [
    "providers",
    "rpc-types",
    "sol-types",
    "json-abi",
    "transports",
    "transport-http",
    "dyn-abi",
] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "json",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Output formats
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }

# Progress & logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
futures = "0.3"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"
dirs = "5"
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
